# telegram-spotify-ai-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  logging.py  main.py  types.py
app/ai/: __init__.py  claude_client.py  playlist_planner.py  track_searcher.py
app/bot/: __init__.py  commands.py  keyboards.py  playback.py  playlists.py  search.py
app/db/: __init__.py  repository.py  schema.py
app/spotify/: __init__.py  auth.py  client.py
app/web/: __init__.py  app.py  auth_routes.py  health.py
db/migrations/: 0001_init.sql
scripts/: manage_db.py
tests/: __init__.py  test_playlist_planner.py  test_repository_auth_state.py
